[package]
name = "rust-bitcoin-explore"
version = "0.1.0"
authors = ["Andrii32"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.17.2"
hex = "0.4.0"
digest = "0.8.1"
sha2 = "0.8.1"
ripemd160 = "0.8.0"
rust-base58 = "0.0.4"